--- a/duck_code_editor/templates/duck_code_editor/code_editor.html
+++ b/duck_code_editor/templates/duck_code_editor/code_editor.html
@@ -74,7 +74,7 @@
 
     <div class="col-md-6" style="margin-top: 0">
       <!-- Output heading -->
-      <div class="code-editor-output">
+      <div class="code-editor-output" style="overflow-y:scroll;">
         {% if output%}
         <pre style="padding-left: 15px; color: white">
           {{ output|linebreaksbr }}
