--- a/duck_code_editor/templates/duck_code_editor/rubber_duck_instructions.html
+++ b/duck_code_editor/templates/duck_code_editor/rubber_duck_instructions.html
@@ -19,8 +19,8 @@
     <p>RUBBER DUCK: “...”</p>
     <p>CODER: <i>“Oh gosh! You’re right! There are no parentheses so b * c is happening first!</i></p>
   </div>
-  <p>
-    We would now like to ask you to use rubber duck debugging in the final tasks. We will provide you with a virtual rubber duckie on your screen. Please state ALL your thoughts out loud. Do not just think your thoughts, but explicitly voice them. Really try to use the technique as extremely and thoroughly as possible. For the next tasks, the rubber duckie is your best friend. You are not being recorded.
+  <p><b>
+    We would now like to ask you to use rubber duck debugging in the final tasks. We will provide you with a virtual rubber duckie on your screen. Please state ALL your thoughts out loud. Do not just think your thoughts, but explicitly voice them. Even though there will also be a 10 minutes limit per task, focus on using the technique as extremely and thoroughly as possible. For the next tasks, the rubber duckie is your best friend. You are not being recorded.</b>
   </p>
   <h4><b>For the next tasks, please work only <u>with rubber duck debugging</u>!</b><h4>
   <!--include a youtube video-->
