--- a/duck_code_editor/templates/duck_code_editor/without_duck_instructions.html
+++ b/duck_code_editor/templates/duck_code_editor/without_duck_instructions.html
@@ -4,9 +4,7 @@
 <div class="container">
   <h2>PART 2: Silent Debugging</h2>
   <p>
-    From this point on, the real experiment will start. Please try to work at a
-    pace and concentration level that feels natural to you. Do not try to rush
-    just because you are participating in an experiment.
+    From this point on, the real experiment will start. There is a 10 minute time limit for each task.
   </p>
 
   <h4><b>For the next tasks, please work in <u>absolute silence</u>!</b><h4>
