--- a/duck_code_editor/templates/duck_code_editor/instructions.html
+++ b/duck_code_editor/templates/duck_code_editor/instructions.html
@@ -38,7 +38,7 @@
     </li>
     <li>
       <p>
-        Each task will be introduced by a description of the code, some example
+        Each task will be introduced by a description of the code and some example
         input/output. Your output after debugging should exactly match that of
         the examples.
       </p>
