Updaote position contacts

--- a/duck_exp/templates/duck_exp/base.html
+++ b/duck_exp/templates/duck_exp/base.html
@@ -45,15 +45,17 @@
     {% endif %}
     <div
       style="
-        position: fixed;
-        bottom: 10px;
-        left: 50%;
-        transform: translateX(-50%);
+        tran
+        bottom: 5px;
+        position: relative;
+        left: 150px;
+        margin-top: 20px;
       "
     >
       <small>
         If you encounter any technical difficulties, please contact Vera with
-        <a href="mailto:veralara.bernhard@uzh.ch">veralara.bernhard@uzh.ch</a> or 079 854 32 47.
+        <a href="mailto:veralara.bernhard@uzh.ch">veralara.bernhard@uzh.ch</a>
+        or 079 854 32 47.
       </small>
     </div>
   </body>
