Final spacing of contact info

--- a/duck_exp/templates/duck_exp/base.html
+++ b/duck_exp/templates/duck_exp/base.html
@@ -45,11 +45,12 @@
     {% endif %}
     <div
       style="
-        tran
-        bottom: 5px;
         position: relative;
-        left: 150px;
-        margin-top: 20px;
+        bottom: 0px;
+        text-align: center;
+        width: 100%;
+        margin-top: 10px;
+        margin-bottom: 10px;
       "
     >
       <small>
